--- a/toDoViews/index.html
+++ b/toDoViews/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <h1>Todo List</h1>
-        <div class="child" style="background-color: #f2f2f2;">
+        <div class="child" style="background-color:#ffe4e1">
           <h3>Task List</h3>
           <p>Add your ToDos by typing in the right and pressing enter to add:</p>
             <ul type="none" class="todo-item" id="todo-item">
